# NLP_lab

./: .gitignore  CLAUDE.md  README.md  architecture.md  dashboard.py  data_contracts.md  fnspid_raw.csv  main.py  price_cache.pkl  processed_data.csv  processing_agent.ipynb  processing_agent_logic.ipynb  pyproject.toml  requirements.txt  stock_prediction_agents.py
agents/: aurora_processing.py  base.py  freddi_explanation.py  jack_manager.py  nadi_classifier.py  sabina_evaluator.py  state.py
docs/: architecture.md  aurora_processing_guide.ipynb  collaborating.md  data_contracts.md  explanation_agent_walkthrough.ipynb  processing_experiments.ipynb
helpers/: __init__.py  classifier_agent.py  constants.py  data_loader.py  evaluator_agent.py  io_utils.py  manager_agent.py  processing_agent.py  types.py
layouts/: dashboard.grid.json  dashboard.slides.json
mock_data/: README.md  classifier.py  decision.json  evaluation_report.json  explanations.csv  final_report.json  final_results.csv  predictions_test.csv  processed_data.csv  retune_request.json  sample_for_explanation.csv
tests/: test_classifier.py  test_explanation.py  test_manager.py  test_sabina_evaluator.py  test_stock_prediction_agents.py
yahoo_finance_dlt/: requirements.txt  yahoo_finance_pipeline.py
