[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-lab-stock-prediction"
version = "0.1.0"
description = "Minimal multi-agent financial-news stock prediction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
addopts = "-q"
