[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb]>=1.0.0",
    "huggingface-hub>=1.21.0",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pandas>=2.0.0",
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]        # import `agents` package from repo root
